<resources>
    <string name="app_name">MyTrains</string>
    <string name="transforma_tu_vida_ncon_el_mejor_plan">TRANSFORMA TU VIDA\nCON EL MEJOR PLAN</string>
    <string name="empieza_tu_cambio_de_manera_100_personalizada_con_una_asesor_a_dise_ada_exclusivamente_para_ti">Empieza tu cambio de manera 100% personalizada con una asesoría diseñada exclusivamente para ti.</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="solicitar_plan_personalizado">SOLICITAR PLAN PERSONALIZADO</string>
    <string name="experiencia_premium_1_a_1">EXPERIENCIA PREMIUM 1 A 1</string>
    <string name="elige_tu_plan">ELIGE TU PLAN:</string>
    <string name="selecciona_tu_objetivo_principal_para_comenzar_tu_transformaci_n_personalizada">Selecciona tu objetivo principal para comenzar tu transformación personalizada.</string>
    <string name="bienestar_integral">Bienestar Integral</string>
    <string name="elimina_dolores_de_espalda_cadera_o_rodilla_mediante_ejercicio_terap_utico_guiado">Elimina dolores de espalda, cadera o rodilla mediante ejercicio terapéutico guiado.</string>
    <string name="rehabilitaci_n_activa">Rehabilitación Activa</string>
    <string name="recupera_tu_movilidad_y_fuerza_tras_una_lesi_n_con_un_enfoque_seguro_y_progresivo">Recupera tu movilidad y fuerza tras una lesión con un enfoque seguro y progresivo.</string>
    <string name="control_de_peso_y_composici_n">Control de Peso y Composición</string>
    <string name="optimiza_tu_figura_pierde_grasa_o_gana_masa_muscular_con_asesor_a_nutricional">Optimiza tu figura: pierde grasa o gana masa muscular con asesoría nutricional.</string>
    <string name="entrenamientos_especializados">Entrenamientos Especializados</string>
    <string name="preparaci_n_para_oposiciones_competiciones_o_condiciones_f_sicas_espec_ficas">Preparación para oposiciones, competiciones o condiciones físicas específicas.</string>
    <string name="continuar">CONTINUAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_language_title" />
    <string name="default_language" />
    <string name="preference_language_summary" />
    <string name="preference_data_source_title" />
    <string name="default_data_source" />
    <string name="preference_data_source_summary" />
    <string name="summary_welcome_video_enabled" />
    <string name="summary_welcome_video_disabled" />
    <string name="preference_welcome_video_title" />
    <string name="summary_music_enabled" />
    <string name="summary_music_disabled" />
    <string name="preference_music_title" />
    <string name="preference_volume_title" />
    <string name="no_tienes_entrenamientos_asignados">No tienes entrenamientos asignados.</string>
    <string name="nuevos_entrenamientos">NUEVOS ENTRENAMIENTOS:</string>
    <string name="ajustes">Ajustes</string>
    <string name="tema">Tema</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>